Update Firebase rules to preserve url-sessions for ROM upload functionality

--- a/firebase-rules.json
+++ b/firebase-rules.json
@@ -1,12 +1,14 @@
 {
   "rules": {
-    "rom-sessions": {
+    "url-sessions": {
       ".read": true,
-      ".write": true
+      ".write": true,
+      ".indexOn": ["timestamp", "createdAt"]
     },
     "public-feedback": {
       ".read": true,
-      ".write": true
+      ".write": true,
+      ".indexOn": ["timestamp_millis", "timestamp"]
     },
     "public-feedback-test": {
       ".read": true,
